# mineball

./: .gitignore  ASSETS_README.md  Anchor.toml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NEXT_STEPS.md  PROJECT_SUMMARY.md  README.md  TREE.txt  package.json  setup.sh  turbo.json
.github/workflows/: ci.yml  deploy-devnet.yml  deploy-frontend.yml
docs/: NARRATIVE.md  SECURITY.md  TECHNICAL.md  TOKENOMICS.md
infra/: README.md
programs/mineball/: Cargo.toml
programs/mineball/src/: constants.rs  errors.rs  events.rs  lib.rs  state.rs
programs/mineball/src/instructions/: buyback.rs  initialize.rs  liquidity.rs  mod.rs  rewards.rs  transfer.rs
scripts/: deploy.js  initialize.js  package.json  simulate.js
tests/: mineball.test.ts  tsconfig.json
