[package]
name = "mineball"
version = "1.0.0"
description = "Mining-inspired flywheel meme coin on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "mineball"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
solana-program = "~1.17.0"

[dev-dependencies]
solana-program-test = "~1.17.0"
solana-sdk = "~1.17.0"
